--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ name = "dropgrad_dingo_actual"
 version = "0.2.0"
 dependencies = ["torch"]
 authors = [
-    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"}
+    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
 ]
 maintainers = [
-    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"}
+    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
 ]
 description = "A PyTorch implementation of DropGrad regularization."
