--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@ maintainers = [
     {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
 ]
-description = "A PyTorch implementation of DropGrad regularization."
+description = "A Torch implementation of DropGrad regularization."
 readme = "README.md"
 requires-python = ">=3.7"
-keywords = ["neural networks", "machine learning", "pytorch"]
+keywords = ["neural networks", "machine learning", "torch"]
 license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
