--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+        pip install torch torchvision matplotlib
         pip install -r requirements.txt
     
     - name: Build package
