--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dropgrad_dingo_actual"
-version = "0.2.0"
-dependencies = ["torch"]
+version = "0.3.0"
+dependencies = ["torch", "torchvision", "matplotlib"]
 authors = [
     {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
@@ -14,10 +14,10 @@ maintainers = [
     {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
 ]
-description = "A Torch implementation of DropGrad regularization."
+description = "A Torch implementation of DropGrad regularization for Federated Learning."
 readme = "README.md"
 requires-python = ">=3.7"
-keywords = ["neural networks", "machine learning", "torch"]
+keywords = ["neural networks", "machine learning", "federated learning", "torch", "dropgrad"]
 license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -30,6 +30,6 @@ classifiers = [
 ]
 
 [project.urls]
-Repository = "https://github.com/dingo-actual/dropgrad"
-Homepage = "https://github.com/dingo-actual/dropgrad"
-Issues = "https://github.com/dingo-actual/dropgrad/issues"
+Repository = "https://github.com/muditbhargava66/dropgrad"
+Homepage = "https://github.com/muditbhargava66/dropgrad"
+Issues = "https://github.com/muditbhargava66/dropgrad/issues"
