--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,8 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "dropgrad_dingo_actual"
+name = "dropgrad"
 version = "0.3.0"
-dependencies = ["torch", "torchvision", "matplotlib"]
 authors = [
     {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
@@ -14,22 +13,45 @@ maintainers = [
     {name = "Ryan Taylor", email = "ryan@beta-reduce.net"},
     {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
 ]
-description = "A Torch implementation of DropGrad regularization for Federated Learning."
+description = "A PyTorch implementation of DropGrad regularization for Federated Learning."
 readme = "README.md"
 requires-python = ">=3.7"
 keywords = ["neural networks", "machine learning", "federated learning", "torch", "dropgrad"]
 license = {file = "LICENSE"}
 classifiers = [
-    "Programming Language :: Python :: 3",
     "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
-    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Operating System :: OS Independent"
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+dependencies = [
+    "numpy",
+    "torch>=1.12.0",
+    "torchvision>=0.13.0",
+    "torchaudio>=0.12.0",
+    "matplotlib",
+    "scipy",
 ]
 
 [project.urls]
 Repository = "https://github.com/muditbhargava66/dropgrad"
 Homepage = "https://github.com/muditbhargava66/dropgrad"
 Issues = "https://github.com/muditbhargava66/dropgrad/issues"
+
+[tool.setuptools]
+packages = ["dropgrad"]
+
+[tool.setuptools.package-data]
+dropgrad = ["*.py"]
